testing/Travis/testcases/Kleene/typecheck/shouldFail/KleeneStarNonEndo.adl
CONTEXT KleeneStarNonEndoCheck IN ENGLISH

PURPOSE CONTEXT KleeneStarNonEndoCheck
{+ This test must fail because Kleene star requires an endorelation (source = target). +}

RELATION t[A*C]
RELATION result[A*C]

RULE testKleeneStarFail: result = t*

ENDCONTEXT
